cleaning up is really difficult - i'm on seriecontroller and onward clases, delete series, delete game